--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,51 @@
 <div class="container">
   <div class="row">
-    <h1 class="title">
-      <%= @post.title %>
-    </h1>
+    <div class="col-md-7 col-lg-7 col-sm-7">
+        <% if flash['notice'] %>
+            <div class="alert alert-success">
+              <%= flash['notice'] %>
+            </div>
+        <% end %>
+      </div>
+    <div class="col-md-8 col-lg-8 col-sm-8">
+      <div id="postlist">
+          <div class="panel">
+            <div class="panel-heading">
+              <div class="text-center">
+                <div class="row">
+                  <div class="col-sm-6 col-md-6 col-lg-6">
+                    <h3 class="pull-left"><%= @post.title %>
+                      <small>
+                        <%= link_to edit_post_url(@post), title: "Edit" do %>
+                          <span class="glyphicon glyphicon-edit"></span>
+                        <% end %>
+                      </small>
+                      <small>
+                        <%= link_to @post, data: { confirm: 'Are you sure?' }, method: :delete, title: "Delete" do %>
+                          <span class="glyphicon glyphicon-trash"></span>
+                        <% end %>
+                      </small>
+                    </h3>
 
-    <p class="date">
-      Created: <%= time_ago_in_words @post.created_at %> Ago 
-    </p>
+                  </div>
+                  <div class="col-sm-3 col-md-3 col-lg-3">
+                    <h4 class="pull-right">
+                      <small><em>Created: <%= time_ago_in_words @post.created_at %> Ago</small>
+                    </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+                  
+            <div class="panel-body">
+              <%= @post.content %>
+            </div>
+          </div>
+        
+        <!-- Panel End -->
+        </div>
+      </div>
+    </div>
     
-    <p class="content">
-      <%= @post.content %>
-    </p>
   </div>
 </div>
