--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,58 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <%= link_to "BlogApp", posts_url, class: "navbar-brand" %>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Home", posts_url %></li>
+        <li><%= link_to "Profile", posts_url %></li>
+        <li><%= link_to "About", posts_url%></li>
+      </ul>
 
-<%= yield %>
-
+      <ul class="nav navbar-nav navbar-right">
+      	<li>
+      	  <%= link_to "#" do %>
+          	Sign Up
+            <span class="glyphicon glyphicon-user"></span>
+          <% end %>
+		</li>
+      	<li>
+      	  <%= link_to "#" do %>
+          	Login
+            <span class="glyphicon glyphicon-log-in"></span>
+          <% end %>
+		</li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Navigation End https://www.w3schools.com/bootstrap/bootstrap_navbar.asp-->
+  <!-- sidebar and page content -->
+  <div class="container-fluid text-center">    
+    <div class="row content">
+      <div class="col-md-2 col-sm-2 col-lg-2 sidenav">
+        <p><%= link_to "Add Blog", new_post_url %></p>
+        <p><%= link_to "My Blog", posts_url %></p>
+      </div>
+      <div class="col-md-10 col-sm-10 col-lg-10 text-left"> 
+        <%= yield %>
+      </div>
+     <!--  <div class="col-md-2 col-sm-2 col-lg-2 sidenav">
+        <div class="well">
+          <p>ADS</p>
+        </div>
+        <div class="well">
+          <p>ADS</p>
+        </div>
+      </div> -->
+    </div>
+  </div>
+  <!-- sidebar adn page content end https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_temp_webpage&stacked=h -->
+  <footer class="container-fluid text-center">
+    <p>Footer Text</p>
+  </footer>
 </body>
 </html>
