--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,26 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-md-6">
+    <div class="col-md-7 col-lg-7 col-sm-7">
+       <% if flash['notice'] %>
+            <div class="alert alert-success">
+              <%= flash['notice'] %>
+            </div>
+        <% end %>
+    </div>
+    <div class="col-md-6 col-lg-6 col-sm-6">
       <div id="postlist">
-        <div class="panel">
+        
         <!-- Panel Starts here -->
           <% @posts.each do |post| %>
+          <div class="panel">
             <div class="panel-heading">
               <div class="text-center">
                 <div class="row">
-                  <div class="col-sm-9">
-                    <h3 class="pull-left"><%= link_to post.title, post %></h3>
+                  <div class="col-sm-6 col-md-6 col-lg-6">
+                    <h3 class="pull-left"><%= link_to post.title, post %></h3> 
+                    
                   </div>
-                  <div class="col-sm-3">
+                  <div class="col-sm-6 col-md-6 col-lg-6">
                     <h4 class="pull-right">
                       <small><em><%= post.created_at.strftime("%B, %d, %Y")%></em></small>
                     </h4>
@@ -24,6 +32,7 @@
             <div class="panel-body">
               <%= post.content %>
             </div>
+          </div>
           <% end %>
         <!-- Panel End -->
         </div>
@@ -32,3 +41,4 @@
     
   </div>
 </div>
+<!-- Reffered from here https://bootsnipp.com/snippets/featured/list-of-blog-posts -->
