--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,13 +26,15 @@
                         <% end %>
                       </small>
                     </h3>
-
-                  </div>
-                  <div class="col-sm-3 col-md-3 col-lg-3">
-                    <h4 class="pull-right">
+                    <h4 class="pull-left">
                       <small><em>Created: <%= time_ago_in_words @post.created_at %> Ago</small>
                     </h4>
                   </div>
+                  <!-- <div class="col-sm-3 col-md-3 col-lg-3">
+                    <h4 class="pull-right">
+                      <small><em>Created: <%= time_ago_in_words @post.created_at %> Ago</small>
+                    </h4>
+                  </div> -->
                 </div>
               </div>
             </div>
