--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,6 @@
 <div class="container">
-  <%= render 'form' %>
+   <div class="row">
+    <h2>Add New Blog</h2>
+    <%= render 'form' %>
+  </div>
 </div>
