--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
     </div>
   </div>
   <!-- sidebar adn page content end https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_temp_webpage&stacked=h -->
-  <footer class="container-fluid text-center">
+  <footer class="container-fluid text-center" style="margin-top: 50px;">
     <p>Footer Text</p>
   </footer>
 </body>
