--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -15,6 +15,9 @@
  */
 @import "bootstrap-sprockets"
 @import "bootstrap"
+@import "font-awesome"
+@import "bootstrap-social"
+
 
 .navbar 
   margin-bottom: 0
