--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,23 +15,32 @@
       </div>
       <ul class="nav navbar-nav">
         <li><%= link_to "Home", posts_url %></li>
-        <li><%= link_to "Profile", posts_url %></li>
+        <% if session[:user_id] %> <li><%= link_to "Profile", user_path(session[:user_id]) %></li> <% end %>
         <li><%= link_to "About", posts_url%></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-      	<li>
-      	  <%= link_to "#" do %>
-          	Sign Up
-            <span class="glyphicon glyphicon-user"></span>
-          <% end %>
-		</li>
-      	<li>
-      	  <%= link_to "#" do %>
-          	Login
-            <span class="glyphicon glyphicon-log-in"></span>
-          <% end %>
-		</li>
+        <% unless session[:user_id]  %>
+        	<li>
+        	  <%= link_to new_user_url do %>
+            	Sign Up
+              <span class="glyphicon glyphicon-user"></span>
+            <% end %>
+  		    </li>
+        	<li>
+        	  <%= link_to login_path do %>
+            	Login
+              <span class="glyphicon glyphicon-log-in"></span>
+            <% end %>
+  		    </li>
+        <% else %>
+          <li>
+            <%= link_to logout_path, method: :delete do %>
+              Logout
+              <span class="glyphicon glyphicon-log-out"></span>
+            <% end %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </nav>
@@ -40,8 +49,10 @@
   <div class="container-fluid text-center">    
     <div class="row content">
       <div class="col-md-2 col-sm-2 col-lg-2 sidenav">
-        <p><%= link_to "Add Blog", new_post_url %></p>
-        <p><%= link_to "My Blog", posts_url %></p>
+        <% if session[:user_id]  %>
+          <p><%= link_to "Add Blog", new_post_url %></p>
+        <% end %>
+        <p><%= link_to "All Blog", posts_url %></p>
       </div>
       <div class="col-md-10 col-sm-10 col-lg-10 text-left"> 
         <%= yield %>
