--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,7 +32,8 @@
                   </div>
                   <br>
                   <h4 class="pull-left">
-                      <small><em>Created: <%= time_ago_in_words @post.created_at %> Ago</em></small>
+                      <small><em>Created: <%= time_ago_in_words @post.created_at %> Ago</em></small><br/>
+                      <small><em>Author : <%=  @post.user.firstname<<" "<< @post.user.lastname %></em></small>
                   </h4>
                   <!-- <div class="col-sm-3 col-md-3 col-lg-3">
                     <h4 class="pull-right">
