--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,7 +15,7 @@
       <%= f.label :blog_content, 'Blog Content' %>
       <%= f.text_area :content, rows: 6, class: "form-control" %>
     </div>
-    <%= hidden_field(:post, :author_id, value: session[:user_id]) %>
+    <%= hidden_field(:post, :author_id, value: current_user.id) %>
     <%= f.submit "Submit", class: "btn btn-default"  %>
   </div>
 <% end %>
