--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,8 +18,8 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :emailid, 'Email Id' %>
-      <%= f.text_field :emailid, class: "form-control" %>
+      <%= f.label :email, 'Email Id' %>
+      <%= f.text_field :email, class: "form-control" %>
     </div>
 
     <!-- visible only in case of update user -->
