--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= user.firstname %></td>
         <td><%= user.lastname %></td>
-        <td><%= user.emailid %></td>
+        <td><%= user.email %></td>
         <td><%= user.password %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
