--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-6 col-lg-6">
                     <h3 class="pull-left"><%= @post.title %>
-                      <% if @post.author_id == session[:user_id] %>
+                      <% if user_signed_in? && @post.author_id == current_user.id %>
                         <small>
                           <%= link_to edit_post_url(@post), title: "Edit" do %>
                             <span class="glyphicon glyphicon-edit"></span>
