--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,4 @@
-<div class="container">
-  <div class="row">
-    <h2>Edit Blog</h2>
-    <%= render 'form' %>
-  </div>
+<div class="row">
+ <h2 style="margin-left: 15px;">Edit Blog</h2>
+ <%= render 'form' %>
 </div>
