--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,4 @@
-<div class="container">
-   <div class="row">
-    <h2>Add New Blog</h2>
-    <%= render 'form' %>
-  </div>
+<div class="row">
+  <h2 style="margin-left: 15px;">Add New Blog</h2>
+  <%= render 'form' %>
 </div>
