--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,8 @@
           <div class="text-center">
             <div class="row">
               <div class="col-sm-6 col-md-6 col-lg-6">
-                <h3 class="pull-left"><%= @post.title %>
+                <h3 class="pull-left" style="margin: 0;">
+                  <%= @post.title %>
                   <% if user_signed_in? && @post.author_id == current_user.id %>
                     <small>
                       <%= link_to edit_post_url(@post), title: "Edit" do %>
@@ -28,8 +29,7 @@
                   <% end %>
                 </h3>
               </div>
-              <br>
-              <h4 class="pull-left">
+              <h4 class="pull-right" style="margin: 0;">
                 <small><em>Created: <%= time_ago_in_words @post.created_at %> Ago</em></small><br/>
                 <small><em>Author : <%=  @post.user.firstname<<" "<< @post.user.lastname %></em></small>
               </h4>
@@ -37,7 +37,7 @@
           </div>
         </div>
         <div class="panel-body">
-          <%= @post.content %>
+          <p><%= @post.content %></p>
         </div>
       </div>
       <!-- comment Section -->
