--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-7 col-lg-7 col-sm-7">
     <% if flash['notice'] %>
-      <div class="alert alert-success" style="margin: 10px 10px 0px 10px;">
+      <div class="alertbox-margin alert alert-success">
         <%= flash['notice'] %>
       </div>
     <% end %>
