Read more link added at the list post page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,7 +27,12 @@
           </div>
                   
           <div class="panel-body">
-            <%= post.content %>
+            <% if post.content.length > 175 %>
+              <%= truncate(post.content, length: 175) %> 
+              <%= link_to 'Read More', post %>
+            <% else %>
+              <%= post.content %>
+            <% end %>
           </div>
         </div>
       <% end %>
