--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="">
    <div class="row">
     <h2>Sign Up</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -21,6 +21,10 @@
         <div class="form-group">
           <%= f.label :email %><br />
           <%= f.email_field :email, autofocus: true, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :image %><br />
+          <%= f.file_field :image, class: "form-control" %>
         </div>
         <div class="form-group">
           <%= f.label :password %>
