Faollow on facebook functionality added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,12 +67,18 @@
             <p>WelCome to BlogApp</p>
           <% end %>
         </div>
+        <div class="well">
+          <p>
+            Follow me on Fb!!
+            <iframe src="https://www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Fjayesh.raypure&amp;layout=box_count&amp;show_faces=false&amp;colorscheme=light&amp;width=65&amp;height=55" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:65px; height:55px;" allowTransparency="true"></iframe>
+          </p>
+        </div>
       </div>
     </div>
   </div>
   <!-- sidebar adn page content end https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_temp_webpage&stacked=h -->
   <footer class="container-fluid text-center" style="margin-top: 50px;">
-    <p>Footer Text</p>
+    <p>BlogApp © 2017</p>
   </footer>
 </body>
 </html>
